[project]
name = "beets-lastimportplus"
version = "0.2.0"
description = "Modified version of the beets lastimport plugin"
readme = "README.md"
authors = [
    { name = "Hamuko", email = "hamuko@burakku.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beets",
    "pylast",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beetsplug"]
